[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://TrackGenerator.gd" type="Script" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://ObstacleSpawner.gd" type="Script" id=5]
[ext_resource path="res://UI.gd" type="Script" id=6]
[ext_resource path="res://CarCam.gd" type="Script" id=7]

[node name="Game" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Viewports" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="VPC1" type="ViewportContainer" parent="Viewports" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 750.0
margin_bottom = 750.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = false
stretch_shrink = 1
_sections_unfolded = [ "Rect" ]

[node name="VP1" type="Viewport" parent="Viewports/VPC1" index="0"]

arvr = false
size = Vector2( 750, 750 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="World" type="Node" parent="Viewports/VPC1/VP1" index="0"]

[node name="Sprite" type="Sprite" parent="Viewports/VPC1/VP1/World" index="0"]

visible = false
position = Vector2( 1000, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 10000, 10000 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="TrackGenerator" type="Node2D" parent="Viewports/VPC1/VP1/World" index="1"]

script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="YSort" type="YSort" parent="Viewports/VPC1/VP1/World" index="2"]

sort_enabled = true
_sections_unfolded = [ "Sort" ]

[node name="Player" parent="Viewports/VPC1/VP1/World/YSort" index="0" instance=ExtResource( 4 )]

position = Vector2( -2, -2 )
friction = 0.05
bounce = 1.0
_sections_unfolded = [ "Angular", "Linear", "Pickable", "Transform" ]
a = 2000.0
maxGas = 1000.0
turnSpeed = 30.0
maxTurn = 1.5
id = 1

[node name="Player2" parent="Viewports/VPC1/VP1/World/YSort" index="1" instance=ExtResource( 4 )]

position = Vector2( -2, -2 )
friction = 0.05
bounce = 1.0
_sections_unfolded = [ "Angular", "Transform" ]
a = 2000.0
maxGas = 1000.0
turnSpeed = 30.0
maxTurn = 1.5
id = 2

[node name="ObstacleSpawner" type="Node2D" parent="Viewports/VPC1/VP1/World" index="3"]

script = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="Viewports/VPC1/VP1" index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 6 )

[node name="LabelLaps" type="Label" parent="Viewports/VPC1/VP1/UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 509.0
margin_top = 295.0
margin_right = 517.0
margin_bottom = 309.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor" ]

[node name="LabelLapRecord" type="Label" parent="Viewports/VPC1/VP1/UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 282.0
margin_top = 10.0
margin_right = 378.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "lap record: N/A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelLapTime" type="Label" parent="Viewports/VPC1/VP1/UI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 9.0
margin_right = 169.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "previous lap time: N/A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CarCam" type="Camera2D" parent="Viewports/VPC1/VP1" index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 7 )

[node name="VPC2" type="ViewportContainer" parent="Viewports" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 754.0
margin_right = 1504.0
margin_bottom = 750.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = false
stretch_shrink = 1
_sections_unfolded = [ "Rect" ]

[node name="VP2" type="Viewport" parent="Viewports/VPC2" index="0"]

arvr = false
size = Vector2( 750, 750 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="UI2" type="CanvasLayer" parent="Viewports/VPC2/VP2" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 6 )

[node name="LabelLaps" type="Label" parent="Viewports/VPC2/VP2/UI2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 509.0
margin_top = 295.0
margin_right = 517.0
margin_bottom = 309.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor" ]

[node name="LabelLapRecord" type="Label" parent="Viewports/VPC2/VP2/UI2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 282.0
margin_top = 10.0
margin_right = 378.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "lap record: N/A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LabelLapTime" type="Label" parent="Viewports/VPC2/VP2/UI2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 9.0
margin_right = 169.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "previous lap time: N/A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CarCam" type="Camera2D" parent="Viewports/VPC2/VP2" index="1"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 7 )


